objects/Training_Events__c.object
<CustomObject>
    <description>Used to track training events</description>
    <fields>
        <fullName>Confirmed_Registrations__c</fullName>
        <inlineHelpText>number of attendees that are confirmed in the event</inlineHelpText>
        <label>Confirmed Registrations</label>
        <summarizedField>Training_Registration__c.Qty__c</summarizedField>
        <summaryFilterItems>
            <field>Training_Registration__c.Confirmed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Registration__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Name</label>
        <referenceTo>Training_Course__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hide_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to prevent the event from being displayed on the Upcoming Events listing on the public registration site</inlineHelpText>
        <label>Hide from Event List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <label>Instructor</label>
        <picklist>
            <picklistValues>
                <fullName>Abeywickrema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bettolo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bombagi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fehleisen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fernando</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gelman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keinke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCabe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natzke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peterson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pocciotti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ricce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roberts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suehring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yeo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>&quot;Silver Peak Systems World Headquarters&quot; &amp; BR() &amp; &quot;2860 De La Cruz Blvd Suite 100&quot; &amp; BR() &amp; &quot;Santa Clara, CA 95050&quot; &amp; BR()&amp;  &quot;408-935-1800&quot;</defaultValue>
        <inlineHelpText>Silver Peak Systems World Headquarters
2860 De La Cruz Blvd Suite 100
Santa Clara, CA 95050
408-935-1800</inlineHelpText>
        <label>Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Attendees__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>Total spots avaialble for training event</inlineHelpText>
        <label>Maximum Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Openings__c</fullName>
        <formula>if( Confirmed_Registrations__c &lt; Maximum_Attendees__c ,
if( Confirmed_Registrations__c+5 &lt; Maximum_Attendees__c ,&quot;Yes&quot;, TEXT(Maximum_Attendees__c - Confirmed_Registrations__c) ),
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Openings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Attendees__c</fullName>
        <inlineHelpText>number of contacts registered</inlineHelpText>
        <label>Registered Attendees</label>
        <summarizedField>Training_Registration__c.Qty__c</summarizedField>
        <summaryForeignKey>Training_Registration__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session_Times__c</fullName>
        <inlineHelpText>Enter the times for the event dates (i.e. 9am to 5pm T,W 9am to 1PM Th)</inlineHelpText>
        <label>Session Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Hide_Event__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Events</fullName>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>Instructor__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Session_Times__c</columns>
        <columns>Confirmed_Registrations__c</columns>
        <columns>Openings__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <nameField>
        <label>Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>